--- a/_posts/2023-04-11-elf文件格式.markdown
+++ b/_posts/2023-04-11-elf文件格式.markdown
@@ -410,8 +410,30 @@ int main(int argc, char **argv)
             process_section_groups(filedata);
 
             process_program_headers(filedata);
+            {
+                get_program_headers(filedata);
+                {
+                    get_64bit_program_headers(filedata, phdrs);
+                    {
+                        unsigned int size = filedata->file_header.e_phentsize;
+	                    unsigned int num = filedata->file_header.e_phnum;
 
+                        phdrs = (Elf64_External_Phdr *)get_data(..., filedata, filedata->file_header.e_phoff, size, num, ...);
+                    }
+                }
+            }
+
+            // PT_DYNAMIC类型的segment中.dynamic的section
             process_dynamic_section(filedata);
+            {
+                get_dynamic_section(filedata);
+                {
+                    get_64bit_dynamic_section(filedata);
+                    {
+                        edyn = (Elf64_External_Dyn *)get_data(..., filedata, filedata->dynamic_addr, 1, filedata->dynamic_size, ...);
+                    }
+                }
+            }
 
             process_relocs(filedata);
 
